--- a/package.json
+++ b/package.json
@@ -5,13 +5,18 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@headlessui/react": "^1.7.18",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "boxicons": "^2.1.4",
+    "dotenv": "^16.4.5",
     "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.0",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -42,6 +47,8 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^5.0.0"
+    "daisyui": "^4.7.2",
+    "gh-pages": "^5.0.0",
+    "tailwindcss": "^3.4.1"
   }
 }
